chore: update gatsby config

--- a/package.json
+++ b/package.json
@@ -27,7 +27,11 @@
     "framer-motion": "^1.11.0",
     "gatsby": "^2.20.2",
     "gatsby-plugin-force-trailing-slashes": "^1.0.4",
+    "gatsby-plugin-google-analytics": "^2.3.2",
+    "gatsby-plugin-manifest": "^2.4.9",
+    "gatsby-plugin-offline": "^3.2.7",
     "gatsby-plugin-react-helmet": "^3.3.2",
+    "gatsby-plugin-remove-generator": "^1.0.4",
     "gatsby-plugin-sharp": "^2.6.9",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
